--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Werror -Wextra -pedant
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
 set(SOURCE_FILES
-        main.cpp
-        SudokuSolver.cpp
-        SudokuSolver.h
+        test/main.cpp
+        src/SudokuSolver.cpp
+        include/SudokuSolver.h
         )
 
 add_executable(sudoku-solver ${SOURCE_FILES})
